header+mains done

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,6 +1,7 @@
 // Colors
 $primaryBg:white;
+$primary:white;
 $darkColor: black;
 $fontColor: black;
 $fontColorInvert: white;
-$secondaryColor: #0282f9;
+$secondaryColor: #0282f9; 
